infrastructure/traefik/ingress-nginx-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
  namespace: nginx-test
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nginx-test.bourne.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-test
                port:
                  number: 80
